@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 - Add in $rest->opsview_version call
+- Improve exception object for showing error details
+- Add in build and install instructions to README
 
 1.181000  2018-04-10 14:44:47+01:00 Europe/London
 
